--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "private": "true",
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
-    "ngCordova": "~0.1.12-alpha"
+    "ngCordova": "~0.1.12-alpha",
+    "angular-mocks": "~1.3.11"
   }
 }
