--- a/bower.json
+++ b/bower.json
@@ -4,6 +4,7 @@
   "devDependencies": {
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
     "ngCordova": "~0.1.12-alpha",
-    "angular-mocks": "~1.3.11"
+    "angular-mocks": "~1.3.11",
+    "Toast-PhoneGap-Plugin": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git#~2.0.4"
   }
 }
