--- a/bower.json
+++ b/bower.json
@@ -5,6 +5,10 @@
     "ionic": "driftyco/ionic-bower#1.0.0-beta.14",
     "ngCordova": "~0.1.12-alpha",
     "angular-mocks": "~1.3.11",
-    "Toast-PhoneGap-Plugin": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git#~2.0.4"
+    "Toast-PhoneGap-Plugin": "https://github.com/EddyVerbruggen/Toast-PhoneGap-Plugin.git#~2.0.4",
+    "ionic-ion-header-shrink": "*",
+    "ionic-ion-drawer": "*",
+    "ionic-ion-swipe-cards": "*",
+    "ionic-ion-tinder-cards": "*"
   }
 }
